[project]
name = "p2fa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.5",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "pyotp>=2.9.0",
    "rich>=14.3.3",
    "typer[all]>=0.24.1",
]

[project.scripts]
p2fa = "p2fa.main:app"

[tool.setuptools.packages.find]
where = ["src"]